# ROS-Houssem-Briac

./: .gitignore  README.md  main.py  pyproject.toml
Residual/: PRESENTATION.md  PRESENTATION_3MIN.md  RAPPORT.md
src/robot/: __init__.py  __main__.py  game.py  logging_config.py
src/robot/controllers/: __init__.py  avoid_strategy.py  controleur.py  controleur_auto_rl.py  controleur_clavier_pygame.py  controleur_pid.py  controleur_terminal.py  free_direction_strategy.py  goal_strategy.py  navigator.py  rl_strategy.py  strategy.py
src/robot/models/: __init__.py  capteur.py  cartographe.py  difficulte.py  environnement.py  fusil.py  fusil_a_pompe.py  lance_flamme.py  laser.py  lidar.py  moteur.py  moteur_differentiel.py  moteur_differentiel_realiste.py  moteur_omnidirectionnel.py  obstacle_circulaire.py  obstacle_rectangle.py  planificateur_astar.py  projectile.py  robot_mobile.py  wave_manager.py  zombie.py
src/robot/models/armes/: __init__.py  arme.py  fusil.py  fusil_a_pompe.py  lance_flamme.py  laser.py
src/robot/models/capteurs/: __init__.py  lidar.py
src/robot/models/moteurs/: __init__.py  moteur_differentiel.py  moteur_differentiel_realiste.py  moteur_omnidirectionnel.py
src/robot/models/navigation/: __init__.py  cartographe.py  grille_occupation.py  planificateur_astar.py
src/robot/models/obstacles/: __init__.py  obstacle.py  obstacle_circulaire.py  obstacle_rectangle.py
src/robot/models/rl/: __init__.py  pre_entrainement.py  rl_agent.py  rl_robot_agent.py
src/robot/views/: __init__.py  vue_pygame.py  vue_terminal.py
