[project]
name = "robot-zombie-survival"
version = "1.0.0"
description = "Simulation robotique mobile - Jeu de survie zombie avec architecture MVC et Pygame"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pygame>=2.6,<3.0",
    "numpy>=2.0,<3.0",
]

[project.scripts]
robot-zombie = "robot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robot"]
